Version 1.2.27 - 2 February 2011, by Eugeni Dodonov

- add cp_afx command

Version 1.2.26.1 - 24 October 2010, by Thierry Vignaud

- append_to_file: better error message making easier to pinpoint actual place
  of error

Version 1.2.26 - 20 July 2010, by Thierry Vignaud

- if_, if__: make easier to debug (#60153)

Version 1.2.25 - 2 June 2010, by Pascal Terjan

- preserve sockets and pipes in cp_af

Version 1.2.24 - 12 January 2010, by Pascal Terjan

- fix whereis_binary to work on absolute symlinks inside chroot

Version 1.2.23 - 14 December 2009, by Pascal Terjan

- get available size of requested partition not / in df

Version 1.2.22 - 1 December 2009, by Thierry Vignaud

- use a more portable df()
- substInFile:
  o do not unlink the symlink to recreate it later to the same target

Version 1.2.21 - 7 October 2009, by Thierry Vignaud

- substInFile:
  o ensure we keep old file as file.bak until we wrote new file
  o call fsync() when editing a non empty file

Version 1.2.20 - 13 August 2009, by Aurelien Lefebvre

- Call fsync after writing to ensure that files are written
- fix df on mips, statfs structure is different from x86

Version 1.2.19 - 09 June 2009, by Eugeni Dodonov

- Correctly handling '#' when loading shell variables (#50670, #51457).

Version 1.2.18 - 14 April 2009, by Pascal Terjan

- decode ' inside '' properly in getVarsFromSh

Version 1.2.17 - 10 March 2009, by Pascal Terjan

- protect various chars in setExportedVarsInSh and setExportedVarsInCsh
- quote correctly ' inside ''

Version 1.2.16 - 2 February 2009, by Pascal Terjan

- protect ;<>&#[]~{}*? in setVarsInSh

Version 1.2.15 - 26 January 2009, by Pascal Terjan

- protect parenthesis in setVarsInSh and drop dead code (#47298)

Version 1.2.14 - 1 October 2008, by Pascal "Pixel" Rigaux

- round_up(), round_down(): workaround "Illegal modulus zero" (#43165)

Version 1.2.13 - 9 September 2008, by Pascal "Pixel" Rigaux

- export cat_utf8() and cat_utf8_or_die()
